--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -1,32 +1,11 @@
 body {
-	font: 16px/1.5 "Trebuchet MS", "Geneva CE", lucida, sans-serif;
-	color: #333;
-	background-color: #fff;
-}
-
-h1 {
-	font-size: 150%;
-	color: #3484D2;
-}
-
-#ajax-spinner {
-	margin: 15px 0 0 15px;
-	padding: 13px;
-	background: white url('../images/spinner.gif') no-repeat 50% 50%;
-	font-size: 0;
-	z-index: 123456;
-	display: none;
-}
-
-div.flash {
+	font: 12pt/1.4 "Trebuchet MS", "Geneva CE", lucida, sans-serif;
 	color: black;
-	background: #FFF9D7;
-	border: 1px solid #E2C822;
-	padding: 1em;
-	margin: 1em 0;
+	background: none;
+	width: 100%;
 }
 
-a[href^="error:"] {
-	background: red;
-	color: white;
+
+img {
+	display: none;
 }
