--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -14,10 +14,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<meta name="description" content="Nette Framework web application skeleton">
+	<meta name="description" content="artmachine">
 	<meta name="robots" content="{$robots}" n:ifset="$robots">
 
-	<title>EVOVIN generator</title>
+	<title>artmachine</title>
 
 	<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.css" type="text/css">
 	<link rel="stylesheet" media="print" href="{$basePath}/css/print.css" type="text/css">
@@ -29,8 +29,10 @@
 </head>
 
 <body>
+	<div class="wrapper">
 	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
-
+	
 	{include #content}
+	</div>
 </body>
 </html>
