--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -44,7 +44,8 @@
 	<div>
 	{include #content}
 	<div class="footter">
-		School project for Applied Evolutionary Algorithms and Computer Art at FIT BUT. Petr Vácha 2011
+		School project for Applied Evolutionary Algorithms and Computer Art at <abbr title="Faculty of Information Technology
+Brno University of Technology">FIT BUT</a>. Petr Vácha 2011
 	</div>
 	</div>
 </body>
